<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/set_alarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_alarm_list">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancle"
            style="@style/AlarmBtn"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:onClick="clickCancle"
            android:text="@string/alarm_cancel" />

        <Button
            android:id="@+id/save"
            style="@style/AlarmBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:onClick="clickSave"
            android:text="@string/alarm_save" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:timePickerMode="spinner" />

            <LinearLayout
                android:id="@+id/get_repeat"
                style="@style/AlarmLayout"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/tog_sun"
                    style="@style/AlarmTogBtn"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/red"
                    android:textOff="@string/sun"
                    android:textOn="@string/sun" />

                <ToggleButton
                    android:id="@+id/tog_mon"
                    style="@style/AlarmTogBtn"
                    android:textOff="@string/mon"
                    android:textOn="@string/mon" />

                <ToggleButton
                    android:id="@+id/tog_tue"
                    style="@style/AlarmTogBtn"
                    android:textOff="@string/tue"
                    android:textOn="@string/tue" />

                <ToggleButton
                    android:id="@+id/tog_wed"
                    style="@style/AlarmTogBtn"
                    android:textOff="@string/wed"
                    android:textOn="@string/wed" />

                <ToggleButton
                    android:id="@+id/tog_thu"
                    style="@style/AlarmTogBtn"
                    android:textOff="@string/thu"
                    android:textOn="@string/thu" />

                <ToggleButton
                    android:id="@+id/tog_fri"
                    style="@style/AlarmTogBtn"
                    android:textOff="@string/fri"
                    android:textOn="@string/fri" />

                <ToggleButton
                    android:id="@+id/tog_sat"
                    style="@style/AlarmTogBtn"
                    android:layout_marginEnd="15dp"
                    android:textOff="@string/sat"
                    android:textOn="@string/sat" />
            </LinearLayout>

            <LinearLayout
                style="@style/AlarmLayout"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_name"
                    style="@style/TextBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/alarm_name"
                    android:textSize="24sp"
                    android:ems="10"
                    android:selectAllOnFocus="true" />
                    <!--android:inputType="textPersonName"-->

                <RadioGroup
                    android:id="@+id/radio_weather"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="30dp" >

                    <RadioButton
                        android:id="@+id/radio_rain"
                        style="@style/AlarmRadio"
                        android:text="@string/alarm_rain" />

                    <RadioButton
                        android:id="@+id/radio_snow"
                        style="@style/AlarmRadio"
                        android:text="@string/alarm_snow"  />

                    <RadioButton
                        android:id="@+id/radio_typhoon"
                        style="@style/AlarmRadio"
                        android:text="@string/alarm_typhoon"  />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>